# CancerDLOptimization

./: README.md  lgbm_main.py  main.py  pyproject.toml  run_exp_4.sh
cancer_nn/: datasets.py  experiments_helpers.py  lgbm.py  metrics.py  nn_helpers.py  preprocess_data.py  preprocess_data_lgbm.py  torch_lightning_modules.py  used_networks.py
configs/: neptune_config.yml
configs/cnnAttvscnn/: config1a.yml  config2.yml  config3.yml  config3a.yml  config4a.yml  regressor_3.yml  regressor_4a.yml
configs/cnn_lstm_multi_loss/: 1.yml  2.yml  3.yml  config2m2.yml
configs/cnnlstm/: config2l.yml  config2m (kopia).yml  config2m.yml  config2mm.yml
configs/cnnlstmatt/: config2l.yml
configs/fcnn/: config1m.yml  fcnn1.yml  fcnn2.yml  fcnn3.yml
configs/lstm_margin/: config2l.yml  config3l.yml  multiloss.yml
configs/marginloss/: config1a.yml  config2a.yml  config3a.yml  regressor_1a.yml
configs/multilossvssingle/: config1m.yml  config2m.yml  config3m.yml  configm.yml  configmd.yml  configs.yml  configsd.yml  unet.yml
configs/multivssingle/: config1m.yml  config2m.yml  config3m.yml  regressor_2a.yml  regressor_3a.yml
configs/single/: config1.yml  config1l.yml  config2a.yml  config2l_na.yml  config2m.yml  config3l.yml  config3m.yml  lstm_1.yml  lstm_2_1.yml  lstm_2_na.yml  lstm_3.yml  lstm_4.yml  regressor_1.yml  regressor_2.yml  unet1.yml  unet3.yml
configs/unet/: config1m.yml  config2m.yml  config2m_1.yml  config2m_2.yml  config2m_3.yml  config2m_4.yml  config2m_5.yml  config2m_6.yml  config3m.yml  config4m.yml  unet2.yml  unet2_1.yml  (+5 more)
tests/: test_cancer_nn.py
(+9 files in other folders)
